--- a/index.html
+++ b/index.html
@@ -1,52 +1,86 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portofolio Notebook Anzil</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Notebook Style</title>
 
-    <!-- FONT TULISAN TANGAN -->
-    <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Patrick+Hand&display=swap" rel="stylesheet">
+
+<style>
+    body {
+        margin: 0;
+        padding: 20px;
+        background: #f7f2e9;
+        font-family: 'Patrick Hand', cursive;
+        line-height: 1.7;
+    }
+
+    .paper {
+        background: #fff;
+        width: 80%;
+        margin: auto;
+        padding: 40px;
+        border-radius: 10px;
+        box-shadow: 0 0 20px rgba(0,0,0,0.1);
+        position: relative;
+    }
+
+    /* Garis kolom */
+    .paper::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 60px;
+        width: 2px;
+        background: rgba(255,0,0,0.3);
+    }
+
+    .title {
+        font-family: 'Indie Flower', cursive;
+        font-size: 36px;
+        margin-bottom: 20px;
+        text-align: center;
+    }
+
+    /* Sticky note */
+    .note {
+        width: 200px;
+        background: #fffACD;
+        padding: 20px;
+        font-family: 'Indie Flower';
+        border: 2px dashed #e0c300;
+        position: absolute;
+        top: -10px;
+        right: -10px;
+        transform: rotate(3deg);
+        box-shadow: 3px 3px 10px rgba(0,0,0,0.2);
+    }
+</style>
+
 </head>
 <body>
 
-    <div class="notebook">
-        <div class="tear"></div>
-        <div class="ring"></div>
+<div class="paper">
 
-        <h1 class="title">Portofolio Anzil</h1>
-
-        <section class="section">
-            <h2>Profil</h2>
-            <p>Saya Anzil Khoirurrizqiya Itadi, mahasiswi Matematika UIN Malang yang suka menulis, membaca, dan belajar hal-hal baru yang rapi dan aesthetic.</p>
-        </section>
-
-        <section class="section">
-            <h2>Keahlian</h2>
-            <ul>
-                <li>Penulisan artikel & cerpen</li>
-                <li>Desain sederhana</li>
-                <li>Matematika dasar & logika</li>
-                <li>HTML & CSS dasar</li>
-            </ul>
-        </section>
-
-        <section class="section">
-            <h2>Proyek</h2>
-            <ul>
-                <li>Website portofolio notebook aesthetic</li>
-                <li>Artikel Teosofi tugas kuliah</li>
-                <li>Desain pamflet kegiatan kampus</li>
-            </ul>
-        </section>
-
-        <section class="section">
-            <h2>Kontak</h2>
-            <p>Email: anzilkhi27@gmail.com</p>
-        </section>
-
+    <div class="note">
+        Tetap semangat ya!  
+        Kamu pasti bisa ✨
     </div>
+
+    <h1 class="title">Catatan Harian</h1>
+
+    <p>
+        Ini contoh tampilan model buku catatan. Kamu bisa menulis apapun di sini.  
+        Kalau mau menambahkan gambar, daftar, atau paragraf lain tinggal tambahkan saja.
+    </p>
+
+    <p>
+        Desain ini bisa kamu ubah kapan saja. Kalau mau garisnya lebih rapat atau warna kertas diganti tinggal bilang.
+    </p>
+
+</div>
 
 </body>
 </html>
